--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "start-dev": "node-dev src/server.js"
+    "start-dev": "node-dev src/server.js",
+    "lint": "eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,12 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "node-dev": "^4.0.0"
   }
 }
